starting on animation; started on YAK lipsync stuff; added UpdatableTexture and RenderTarget; moved lots of stuff from TextureResource.cs to OpenGLRenderer.cs (so that Texturing is more API-independent)
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@268 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -67,6 +67,7 @@
     <Compile Include="FileSystem\FileSystem.cs" />
     <Compile Include="Game\Actor.cs" />
     <Compile Include="Game\AnimationResource.cs" />
+    <Compile Include="Game\Animator.cs" />
     <Compile Include="Game\AnmResource.cs" />
     <Compile Include="Game\CommonStrings.cs" />
     <Compile Include="Game\DialogManager.cs" />
