--- a/sheep/sheep2008.vcproj
+++ b/sheep/sheep2008.vcproj
@@ -399,6 +399,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sheepContextTree.h"
+				>
+			</File>
+			<File
 				RelativePath=".\sheepDisassembler.h"
 				>
 			</File>
