simplified switching between renderers
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@286 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Graphics\LightmapResource.cs" />
     <Compile Include="Graphics\ModelResource.cs" />
     <Compile Include="Graphics\OpenGLRenderer.cs" />
+    <Compile Include="Graphics\RenderWindow.cs" />
     <Compile Include="Graphics\SkyBox.cs" />
     <Compile Include="Graphics\SpriteBatch.cs" />
     <Compile Include="Graphics\TextureResource.cs" />
