--- a/levelviewer/Game/Game2008.csproj
+++ b/levelviewer/Game/Game2008.csproj
@@ -56,9 +56,11 @@
     <Reference Include="Tao.Sdl, Version=1.2.13.0, Culture=neutral, PublicKeyToken=9c7a200e36c0094e, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Direct3D9RenderWindow.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="MainMenu.cs" />
     <Compile Include="MonoMain.cs" />
+    <Compile Include="OpenGLRenderWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeBlockSplash.cs" />
     <Compile Include="VerbPickerManager.cs" />
