--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -44,11 +44,12 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE;SOUND_DISABLED</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="irrKlang.NET2.0, Version=1.1.3.0, Culture=neutral, PublicKeyToken=a854741bd80517c7, processorArchitecture=x86">
@@ -135,14 +136,6 @@
     <Compile Include="Sound\SoundTrackResource.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="WaitHandle.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Shaders\basic_lightmapped.fx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Shaders\texturedBillboard.fx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\camera.bmp">
