moved some NVC stuff out of the SceneManager and into the NvcManager; implemented the (NOT_)DIALOGUE_TOPICS_LEFT NVC cases
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@318 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Game\HelperIcons.cs" />
     <Compile Include="Game\MomResource.cs" />
     <Compile Include="Game\Nouns.cs" />
+    <Compile Include="Game\NvcManager.cs" />
     <Compile Include="Game\NvcResource.cs" />
     <Compile Include="Game\SceneManager.cs" />
     <Compile Include="Game\ScnResource.cs" />
