added the IButtonContainer; working on the options menu
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@323 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Gui\Button.cs" />
     <Compile Include="Gui\CursorResource.cs" />
     <Compile Include="Gui\Font.cs" />
+    <Compile Include="Gui\OptionsMenu.cs" />
     <Compile Include="Gui\Unit.cs" />
     <Compile Include="Gui\VerbButton.cs" />
     <Compile Include="Gui\VerbButtonSet.cs" />
