more work on the options menu
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@325 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Graphics\Utils.cs" />
     <Compile Include="Gui\Button.cs" />
     <Compile Include="Gui\CursorResource.cs" />
+    <Compile Include="Gui\Dropdown.cs" />
     <Compile Include="Gui\Font.cs" />
     <Compile Include="Gui\OptionsMenu.cs" />
     <Compile Include="Gui\Unit.cs" />
