SpriteBatch is *much* faster now; added message box GUI thingy
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@326 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Gui\CursorResource.cs" />
     <Compile Include="Gui\Dropdown.cs" />
     <Compile Include="Gui\Font.cs" />
+    <Compile Include="Gui\MsgBox.cs" />
     <Compile Include="Gui\OptionsMenu.cs" />
     <Compile Include="Gui\Unit.cs" />
     <Compile Include="Gui\VerbButton.cs" />
