--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -117,8 +117,11 @@
     <Compile Include="Gui\CursorResource.cs" />
     <Compile Include="Gui\Dropdown.cs" />
     <Compile Include="Gui\Font.cs" />
+    <Compile Include="Gui\GuiMaster.cs" />
+    <Compile Include="Gui\MainMenu.cs" />
     <Compile Include="Gui\MsgBox.cs" />
     <Compile Include="Gui\OptionsMenu.cs" />
+    <Compile Include="Gui\TimeBlockSplash.cs" />
     <Compile Include="Gui\Unit.cs" />
     <Compile Include="Gui\VerbButton.cs" />
     <Compile Include="Gui\VerbButtonSet.cs" />
