got renderer and screen resolution options working
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@328 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2008.csproj
+++ b/levelviewer/Main/Main2008.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Resource\InfoResource.cs" />
     <Compile Include="Resource\ResourceManager.cs" />
     <Compile Include="Resource\TextResource.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Sheep\BasicSheepFunctions.cs" />
     <Compile Include="Sheep\Sheep.cs" />
     <Compile Include="Sound\Sound.cs" />
