finally removed all deprecated alpha-testing stuff; fixed crash in pathfinder; fixed exception in Viewer
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@336 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -183,9 +183,9 @@
     <None Include="Shaders\basic_lightmapped.fx.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Shaders\basic_lightmapped.fx.hlsl">
+    <Content Include="Shaders\basic_lightmapped.fx.hlsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="Shaders\basic_lightmapped_notexture.fx.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -195,9 +195,9 @@
     <None Include="Shaders\basic_textured.fx.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Shaders\basic_textured.fx.hlsl">
+    <Content Include="Shaders\basic_textured.fx.hlsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="Shaders\skybox.fx.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
