working on previewing MOD/BSP/SCN/SIF in browser/viewer
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@345 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Viewer/Viewer2008.csproj
+++ b/levelviewer/Viewer/Viewer2008.csproj
@@ -72,6 +72,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramArguments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Console.resx">
       <SubType>Designer</SubType>
