--- a/browser/Settings.settings
+++ b/browser/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ExtractPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="PathToViewer" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
