--- a/browser/browser.csproj
+++ b/browser/browser.csproj
@@ -86,6 +86,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="SetViewerPath.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SetViewerPath.Designer.cs">
+      <DependentUpon>SetViewerPath.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sheep.cs" />
     <Compile Include="Strings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -98,6 +104,9 @@
     <EmbeddedResource Include="About.resx">
       <SubType>Designer</SubType>
       <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SetViewerPath.resx">
+      <DependentUpon>SetViewerPath.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Strings.hr-HR.resx">
       <SubType>Designer</SubType>
@@ -157,6 +166,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
