mod converter handles color
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@352 80473309-fabf-408f-887a-d98baf40245d

--- a/model_converter/mod2obj/mod2obj2008.vcproj
+++ b/model_converter/mod2obj/mod2obj2008.vcproj
@@ -166,11 +166,11 @@
 	</References>
 	<Files>
 		<File
-			RelativePath="..\..\mod2obj.cpp"
+			RelativePath=".\mod2obj.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\modfile.h"
+			RelativePath=".\modfile.h"
 			>
 		</File>
 	</Files>
