--- a/levelviewer/Game/Game2010.csproj
+++ b/levelviewer/Game/Game2010.csproj
@@ -75,8 +75,12 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tao.OpenGl, Version=2.1.0.12, Culture=neutral, PublicKeyToken=1ca010269a4501ef, processorArchitecture=MSIL" />
-    <Reference Include="Tao.Sdl, Version=1.2.13.0, Culture=neutral, PublicKeyToken=9c7a200e36c0094e, processorArchitecture=MSIL" />
+    <Reference Include="Tao.OpenGl">
+      <HintPath>..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenGl.dll</HintPath>
+    </Reference>
+    <Reference Include="Tao.Sdl">
+      <HintPath>..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.Sdl.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direct3D9RenderWindow.cs" />
@@ -115,7 +119,7 @@
   <Target Name="BeforeBuild">
   </Target> -->
   <Target Name="AfterBuild">
-    <Copy SourceFiles="..\$(ConfigurationName)\sheep.dll;..\Release\barn.dll" DestinationFolder="$(OutDir)" />
+    <Copy SourceFiles="..\$(ConfigurationName)\sheep.dll;..\$(ConfigurationName)\barn.dll" DestinationFolder="$(OutDir)" />
   </Target>
   <PropertyGroup>
     <PostBuildEvent>
