builds on Linux
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@377 80473309-fabf-408f-887a-d98baf40245d

--- a/sheep/makefile-library
+++ b/sheep/makefile-library
@@ -3,7 +3,7 @@ CPPC=g++
 LINKER=g++
 COMPILER_FLAGS= -g -fPIC
 LINKER_FLAGS=-shared -Wl
-EXECUTABLE=libsheepc.so
+EXECUTABLE=libsheep.so
 
 SOURCES = sheepScanner.cpp sheepParser.cpp sheepCodeGenerator.cpp sheepCodeTree.cpp sheepFileWriter.cpp sheepFileReader.cpp sheepMachine.cpp sheepMain.cpp sheepCompiler.cpp sheepDisassembler.cpp sheepMemoryAllocator.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
