got OpenGL 3.0 stuff working again
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@379 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Graphics\LightmapResource.cs" />
     <Compile Include="Graphics\ModelResource.cs" />
     <Compile Include="Graphics\OpenGl\GlCubeMap.cs" />
+    <Compile Include="Graphics\OpenGl\GlException.cs" />
     <Compile Include="Graphics\OpenGl\GlIndexBuffer.cs" />
     <Compile Include="Graphics\OpenGl\GlRenderTarget.cs" />
     <Compile Include="Graphics\OpenGl\GlslEffect.cs" />
