--- a/levelviewer/Viewer/Settings.settings
+++ b/levelviewer/Viewer/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="SearchPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Renderer" Type="System.String" Scope="User">
+      <Value Profile="(Default)">OpenGL</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
