--- a/levelviewer/Game/Game2010.csproj
+++ b/levelviewer/Game/Game2010.csproj
@@ -76,10 +76,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Tao.OpenGl">
-      <HintPath>..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenGl.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenGl.dll</HintPath>
     </Reference>
     <Reference Include="Tao.Sdl">
-      <HintPath>..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.Sdl.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.Sdl.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
