--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -74,7 +74,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="irrKlang.NET2.0">
-      <HintPath>..\..\..\..\..\code\irrKlang-1.3.0\bin\dotnet-2.0\irrKlang.NET2.0.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\code\irrKlang-1.3.0\bin\dotnet-2.0\irrKlang.NET2.0.dll</HintPath>
     </Reference>
     <Reference Include="SlimDX, Version=2.0.11.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=AMD64" />
     <Reference Include="System" />
@@ -82,7 +82,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Tao.OpenGl">
-      <HintPath>..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenGl.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenGl.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -107,6 +107,7 @@
     <Compile Include="Game\NvcManager.cs" />
     <Compile Include="Game\NvcResource.cs" />
     <Compile Include="Game\ISceneCustomizer.cs" />
+    <Compile Include="Game\Radiosity.cs" />
     <Compile Include="Game\SceneManager.cs" />
     <Compile Include="Game\ScnResource.cs" />
     <Compile Include="Game\SifResource.cs" />
