improvements to radiosity; billboards work again (mostly)
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@397 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Game\GasResource.cs" />
     <Compile Include="Game\HelperIcons.cs" />
     <Compile Include="Game\LaserSceneCustomizer.cs" />
+    <Compile Include="Game\LightmapSpecs.cs" />
     <Compile Include="Game\MomResource.cs" />
     <Compile Include="Game\Nouns.cs" />
     <Compile Include="Game\NvcManager.cs" />
