--- a/levelviewer/Viewer/Viewer2010.csproj
+++ b/levelviewer/Viewer/Viewer2010.csproj
@@ -126,6 +126,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TextureViewer.resx">
+      <DependentUpon>TextureViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -161,6 +164,12 @@
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="TextureViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TextureViewer.Designer.cs">
+      <DependentUpon>TextureViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="Video.cs">
       <SubType>Component</SubType>
