--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Math\Constants.cs" />
     <Compile Include="Math\Matrix.cs" />
+    <Compile Include="Math\Plane.cs" />
     <Compile Include="Math\Quaternion.cs" />
     <Compile Include="Math\Vector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -175,6 +176,9 @@
     <Compile Include="WaitHandle.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Icons\bulb.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icons\camera.bmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -204,6 +208,12 @@
     <Content Include="Shaders\basic_textured.fx.hlsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Shaders\radiosity.fx.glsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Shaders\radiosity_omnilight.fx.glsl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Shaders\skybox.fx.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
