--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -73,14 +73,14 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="irrKlang.NET2.0">
-      <HintPath>..\..\..\..\..\..\code\irrKlang-1.3.0\bin\dotnet-2.0\irrKlang.NET2.0.dll</HintPath>
-    </Reference>
     <Reference Include="SlimDX, Version=2.0.11.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=AMD64" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tao.OpenAl">
+      <HintPath>..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenAl.dll</HintPath>
+    </Reference>
     <Reference Include="Tao.OpenGl">
       <HintPath>..\..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenGl.dll</HintPath>
     </Reference>
@@ -169,9 +169,11 @@
     <Compile Include="Settings.cs" />
     <Compile Include="Sheep\BasicSheepFunctions.cs" />
     <Compile Include="Sheep\Sheep.cs" />
+    <Compile Include="Sound\Mp3Decoder.cs" />
     <Compile Include="Sound\Sound.cs" />
     <Compile Include="Sound\SoundManager.cs" />
     <Compile Include="Sound\SoundTrackResource.cs" />
+    <Compile Include="Sound\WavFile.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="WaitHandle.cs" />
   </ItemGroup>
@@ -249,6 +251,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Graphics\Direct3D10\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
