removed obnoxious console output
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@406 80473309-fabf-408f-887a-d98baf40245d

--- a/libbarn/libbarn2010.vcxproj
+++ b/libbarn/libbarn2010.vcxproj
@@ -110,7 +110,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>lzo2.lib;zlibwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lzo2.lib;zlibstat.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(ProjectName).dll</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AssemblyDebug>true</AssemblyDebug>
