fixed a couple compiling issues; added bat script to generate Sheep flexer and parser in Windows
git-svn-id: https://svn.code.sf.net/p/gk3tools/code/trunk@415 80473309-fabf-408f-887a-d98baf40245d

--- a/levelviewer/Main/Main2010.csproj
+++ b/levelviewer/Main/Main2010.csproj
@@ -79,7 +79,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Tao.OpenAl">
-      <HintPath>..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenAl.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenAl.dll</HintPath>
     </Reference>
     <Reference Include="Tao.OpenGl">
       <HintPath>..\..\..\..\..\..\code\taoframework-2.1.0\bin\Tao.OpenGl.dll</HintPath>
